main-websvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:050752634782:certificate/16bf0eff-4498-4d0a-b6af-13bbeeabd79d"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: "TCP"
spec:
   selector:
      app: html-webapp
   ports:
   - protocol: TCP
     port: 443
     targetPort: 80
   type: LoadBalancer
