web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
spec:
   selector:
      app: html-webapp
   ports:
   - protocol: TCP
     port: 8080
     targetPort: 80
   type: LoadBalancer
