main-webingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: nswamy.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: html-webapp
            port:
              number: 443
